chassis/build/log/idf_py_stderr_output_675480
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c: In function 'motor_pulses2mps':
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c:17:1: error: no return statement in function returning non-void [-Werror=return-type]
   17 | }
      | ^
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c: In function 'motor_mps2pulses':
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c:22:1: error: no return statement in function returning non-void [-Werror=return-type]
   22 | }
      | ^
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c: In function 'motor_task':
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c:36:30: warning: variable 'right_pulses' set but not used [-Wunused-but-set-variable]
   36 |         int left_pulses = 0, right_pulses = 0;
      |                              ^~~~~~~~~~~~
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c:36:13: warning: variable 'left_pulses' set but not used [-Wunused-but-set-variable]
   36 |         int left_pulses = 0, right_pulses = 0;
      |             ^~~~~~~~~~~
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c: At top level:
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c:24:13: warning: 'motor_set_target' defined but not used [-Wunused-function]
   24 | static void motor_set_target( dc_motor_control_context_t* control_context, int target_pulses)
      |             ^~~~~~~~~~~~~~~~
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c:19:12: warning: 'motor_mps2pulses' defined but not used [-Wunused-function]
   19 | static int motor_mps2pulses(float mps)
      |            ^~~~~~~~~~~~~~~~
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c:14:14: warning: 'motor_pulses2mps' defined but not used [-Wunused-function]
   14 | static float motor_pulses2mps(int pulses)
      |              ^~~~~~~~~~~~~~~~
/home/yuangod/project/workspace/yuangod_smart_car/main/user_motors/user_motors.c:9:20: warning: 'TAG' defined but not used [-Wunused-variable]
    9 | static const char* TAG = "from -> "__FILE__;
      |                    ^~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:90：esp-idf/main/CMakeFiles/__idf_main.dir/user_motors/user_motors.c.obj] 错误 1
make[2]: *** 正在等待未完成的任务....
make[1]: *** [CMakeFiles/Makefile2:4931：esp-idf/main/CMakeFiles/__idf_main.dir/all] 错误 2
make: *** [Makefile:136：all] 错误 2
